// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`exportBuilder > matches spec §7.2 structure 1`] = `
"# Feedback for my-prototype

Generated: 2026-04-15T14:45:00Z
Reviewers: Sarah, Mike (2 total, 4 comments)
Routes covered: /, /pricing, /signup

---

## Summary

4 comments across 3 routes.

By reviewer:
- Sarah — 3 comments
- Mike — 1 comments

By route:
- / — 2 comments
- /pricing — 1 comments
- /signup — 1 comments

---

## Route: /

### [cmt_1] Comment 1 — Sarah, 2026-04-15T14:24:00Z
**Element:** \`<button data-testid="primary-cta">\` ("Get started for free")
**Selector candidates:**
- testid: \`primary-cta\`
- css: \`main > section:nth-of-type(1) > button.cta-primary\`
- xpath: \`/html/body/main/section[1]/button[1]\`
**Position:** 47% from left, 38% from top of element
**Viewport at time of comment:** 390×844 (mobile)

> This CTA gets lost against the background.

---

### [cmt_2] Comment 2 — Sarah, 2026-04-15T14:31:00Z
**Element:** \`<h1>\` ("Welcome to Sensavera")
**Selector candidates:**
- testid: (none)
- css: \`main > header > h1\`
- xpath: \`/html/body/main/header/h1\`
**Position:** 12% from left, 50% from top of element
**Viewport at time of comment:** 1440×900 (desktop)

> Headline is doing too much.

---

## Route: /pricing

### [cmt_3] Comment 1 — Sarah, 2026-04-15T14:24:00Z
**Element:** \`<button data-testid="primary-cta">\` ("Get started for free")
**Selector candidates:**
- testid: \`primary-cta\`
- css: \`main > section:nth-of-type(1) > button.cta-primary\`
- xpath: \`/html/body/main/section[1]/button[1]\`
**Position:** 47% from left, 38% from top of element
**Viewport at time of comment:** 390×844 (mobile)

> Confusing pricing tier.

---

## Route: /signup

### [cmt_m1] Comment 1 — Mike, 2026-04-15T14:24:00Z
**Element:** \`<button data-testid="primary-cta">\` ("Get started for free")
**Selector candidates:**
- testid: \`primary-cta\`
- css: \`main > section:nth-of-type(1) > button.cta-primary\`
- xpath: \`/html/body/main/section[1]/button[1]\`
**Position:** 47% from left, 38% from top of element
**Viewport at time of comment:** 390×844 (mobile)

> Form has too many fields.
"
`;

exports[`exportReviewer > matches spec §7.1 structure 1`] = `
"# Feedback for my-prototype — from Sarah

Generated: 2026-04-15T14:45:00Z
Reviewer: Sarah
Total comments: 3
Routes covered: /, /pricing

---

## Route: /

### [cmt_1] Comment 1 — 2026-04-15T14:24:00Z
**Element:** \`<button data-testid="primary-cta">\` ("Get started for free")
**Selector candidates:**
- testid: \`primary-cta\`
- css: \`main > section:nth-of-type(1) > button.cta-primary\`
- xpath: \`/html/body/main/section[1]/button[1]\`
**Position:** 47% from left, 38% from top of element
**Viewport at time of comment:** 390×844 (mobile)

> This CTA gets lost against the background.

---

### [cmt_2] Comment 2 — 2026-04-15T14:31:00Z
**Element:** \`<h1>\` ("Welcome to Sensavera")
**Selector candidates:**
- testid: (none)
- css: \`main > header > h1\`
- xpath: \`/html/body/main/header/h1\`
**Position:** 12% from left, 50% from top of element
**Viewport at time of comment:** 1440×900 (desktop)

> Headline is doing too much.

---

## Route: /pricing

### [cmt_3] Comment 1 — 2026-04-15T14:24:00Z
**Element:** \`<button data-testid="primary-cta">\` ("Get started for free")
**Selector candidates:**
- testid: \`primary-cta\`
- css: \`main > section:nth-of-type(1) > button.cta-primary\`
- xpath: \`/html/body/main/section[1]/button[1]\`
**Position:** 47% from left, 38% from top of element
**Viewport at time of comment:** 390×844 (mobile)

> Confusing pricing tier.
"
`;
